Add Initial console with core functionality and basic plugins
Implement the "Initial" console featuring a Quake-style interface, core commands, typing effects, and sound feedback. Includes support for basic commands (help, clear, exit, etc.), plugin registration, and mock tools like SEO and Lighthouse. Introduced relevant build setup, API connectivity, and thorough documentation.

--- a/index.html
+++ b/index.html
@@ -8,4 +8,8 @@
   <body>
     <a href="/dev/index.html">Component Demo</a>
   </body>
+
+  <script src="https://unpkg.com/@initial.sh/initial@1.0.0/dist/initial.js"></script>
+  <initial></initial>
+  <button onclick="document.querySelector('initial').open()">Launch initial</button>
 </html>
