--- a/dev/index.html
+++ b/dev/index.html
@@ -6,17 +6,22 @@
     <title>&lt;my-element> Demo</title>
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../node_modules/lit/polyfill-support.js"></script>
-    <script type="module" src="../my-element.js"></script>
+    <script type="module" src="../initial-sh.js"></script>
     <style>
       p {
         border: solid 1px blue;
-        padding: 8px;
+        padding: 83px;
+      }
+      button {
+          background: green;
       }
     </style>
   </head>
   <body>
-    <my-element>
-      <p>This is child content</p>
-    </my-element>
+
+
+    <initial-sh></initial-sh>
+
+    <p><button onclick="document.querySelector('initial-sh').show()">Launch initial</button></p>
   </body>
 </html>
