Standardize formatting across all files.
Applied consistent code formatting by removing unnecessary spacing in imports, properties, and object definitions. Adjusted HTML files to follow uppercase `DOCTYPE` convention and ensured proper indentation for readability. These changes improve code consistency and maintainability.

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html>
   <head>
@@ -13,15 +13,17 @@
         padding: 83px;
       }
       button {
-          background: green;
+        background: green;
       }
     </style>
   </head>
   <body>
-
-
     <initial-sh></initial-sh>
 
-    <p><button onclick="document.querySelector('initial-sh').show()">Launch initial</button></p>
+    <p>
+      <button onclick="document.querySelector('initial-sh').show()">
+        Launch initial
+      </button>
+    </p>
   </body>
 </html>
