Refactor "initial-sh" terminal component to "initial-console"
Renamed the "initial-sh" component and related files to "initial-console" for better naming clarity. Updated all references, including custom element names, TypeScript class names, and test cases. Adjusted .gitignore and demo files to accommodate the new naming convention.

--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,7 @@
     <title>&lt;my-element> Demo</title>
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../node_modules/lit/polyfill-support.js"></script>
-    <script type="module" src="../initial-sh.js"></script>
+    <script type="module" src="../initial-console.js"></script>
     <style>
       p {
         border: solid 1px blue;
@@ -18,10 +18,10 @@
     </style>
   </head>
   <body>
-    <initial-sh id="console1" sounds></initial-sh>
+    <initial-console id="console1" sounds></initial-console>
 
     <div class="my-console-container" style="height: 337px; background: blue">
-      <initial-sh id="console2" static></initial-sh>
+      <initial-console id="console2" static></initial-console>
     </div>
 
     <p>
