Refactor terminal and shell logic; remove redundant code
Centralized shell options and streamlined message handling while adding support for audio functionality. Deprecated and removed cluttered unused methods. Improved typing and structure for enhanced clarity and maintainability.

--- a/dev/index.html
+++ b/dev/index.html
@@ -37,7 +37,7 @@
 
     <hr />
     <h1>initial terminal</h1>
-    <div class="my-console-container">
+    <div class="my-console-container" style="background: blue; height: 333px">
       <initial-terminal id="terminal1"> </initial-terminal>
     </div>
   </body>
