Replace InitialTerminal with InitialSh, refactor and rename files
Consolidated InitialTerminal and InitialSh functionalities into InitialSh, removing redundant code. Updated related filenames, styles, and references accordingly. Adjusted markup and global declarations to reflect the new structure.

--- a/dev/index.html
+++ b/dev/index.html
@@ -6,8 +6,8 @@
     <title>&lt;my-element> Demo</title>
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../node_modules/lit/polyfill-support.js"></script>
+    <script type="module" src="../initial-console.js"></script>
     <script type="module" src="../initial-sh.js"></script>
-    <script type="module" src="../initial-terminal.js"></script>
     <style>
       p {
         border: solid 1px blue;
@@ -20,7 +20,7 @@
   </head>
   <body>
     <h1>Non static - Press Help or click</h1>
-    <initial-sh id="console1" sounds> </initial-sh>
+    <initial-console id="console1" sounds> </initial-console>
 
     <p>
       <button onclick="document.getElementById('console1').show()">
@@ -32,13 +32,13 @@
 
     <h1>Static</h1>
     <div class="my-console-container" style="background: blue; height: 333px">
-      <initial-sh id="console2" static> </initial-sh>
+      <initial-console id="console2" static> </initial-console>
     </div>
 
     <hr />
     <h1>initial terminal</h1>
     <div class="my-console-container" style="background: blue; height: 333px">
-      <initial-terminal id="terminal1"> </initial-terminal>
+      <initial-sh id="terminal1"> </initial-sh>
     </div>
   </body>
 </html>
