Refactor formatting and code style for consistency.
Updated code formatting across multiple files to improve readability and maintainability. Changes include better alignment, removal of unnecessary blank lines, and consistent use of spaces around elements like attributes and method calls.

--- a/dev/index.html
+++ b/dev/index.html
@@ -10,7 +10,6 @@
     <script type="module" src="../console.js"></script>
   </head>
   <body>
-
     <h1>initial-console show()</h1>
     <initial-console id="console1" sounds></initial-console>
     <p>
@@ -36,7 +35,12 @@
 
     <h1>initial-terminal</h1>
     <div class="my-console-container" style="background: green; height: 333px">
-      <initial-terminal id="shell1" banner="Shello from shell 👋" style="--initial-background-color: rgba(0, 0, 0, 0.8)"> </initial-terminal>
+      <initial-terminal
+        id="shell1"
+        banner="Shello from shell 👋"
+        style="--initial-background-color: rgba(0, 0, 0, 0.8)"
+      >
+      </initial-terminal>
     </div>
   </body>
 </html>
