--- a/dev/shell.html
+++ b/dev/shell.html
@@ -12,7 +12,11 @@
   <body>
     <h1>initial-terminal</h1>
     <div class="my-console-container" style="background: green; height: 333px">
-      <initial-terminal banner="Shello 👋" style="--initial-background-color: rgba(0, 0, 0, 0.8)"> </initial-terminal>
+      <initial-terminal
+        banner="Shello 👋"
+        style="--initial-background-color: rgba(0, 0, 0, 0.8)"
+      >
+      </initial-terminal>
     </div>
   </body>
 </html>
