Update Shell configuration method from config() to init()
The method call was updated to reflect the correct API usage. This ensures that the banner is initialized properly and avoids potential runtime issues.

--- a/dev/shell.html
+++ b/dev/shell.html
@@ -24,8 +24,8 @@
     import {Shell} from 'initial-shell';
 
     const initialTerminal = document.getElementById('terminal1');
-    const customShell = new Shell({})
-    customShell.config({banner: 'Star shell'})
+    const customShell = new Shell()
+    customShell.init({banner: 'Star shell'})
     initialTerminal.loadShell(customShell)
   </script>
   </body>
