Add viewport meta tag to improve mobile responsiveness
The `<meta name="viewport">` tag was added to several HTML files to ensure better rendering and usability on mobile devices. This change enhances the layout by setting the initial scale and allowing user scalability.

--- a/dev/console.html
+++ b/dev/console.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Initial Console & Shell Demo</title>
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1,user-scalable=yes"
+    />
     <!-- polyfills, probably for older browsers -->
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../node_modules/lit/polyfill-support.js"></script>
