--- a/dev/shell.html
+++ b/dev/shell.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Initial Console & Shell Demo</title>
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1,user-scalable=yes"
+    />
     <!-- polyfills, probably for older browsers -->
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../node_modules/lit/polyfill-support.js"></script>
